# reading-tools

./: .gitignore  README.md  pyproject.toml
config/: reading-desktop.json
scripts/: launch-desktop  launch-element  launch-window
src/tts_generation/: cli.py  generation.py
src/tts_preprocess/: clean.py  cli.py  extract.py  page_clean.py  pages.py  pipeline.py  preview.py  trim.py
tests/: test_clean.py  test_extract.py  test_generation.py  test_page_clean.py  test_pages.py  test_pipeline.py  test_preview.py  test_trim.py
