[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-preprocess"
version = "0.1.0"
description = "Prepare PDF text excerpts for audiobook generation."
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
prepare-for-audiobook = "tts_preprocess.cli:main"
generate-audiobook = "tts_generation.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
